aelys/tests/modules/errors/private_access.aelys
// private_access.aelys - Should error when accessing private symbol
needs utils

utils.private()  // Error: 'private' is not public in 'utils'
